# vqu

./: .gitignore  README.md  __main__.py  pyproject.toml  ruff.toml
.github/workflows/: python-uv-build.yml  release-publish.yml
examples/: .vqu.json  .vqu.yaml  compose.yaml
examples/proj1/: conf.json  conf.toml
examples/proj2/: conf.xml  conf.yaml
samples/: .vqu.json
samples/proj1/: .env
src/vqu/: cli.py  json_config_file.py  models.py  project.py  yaml_file.py
tests/unit/: test_cli.py  test_json_config_file.py  test_logger.py  test_models.py  test_projects.py  test_yaml_file.py
