[project]
name = "vqu"
version = "0.1.0"
description = "Version Queries and Updates for .env, JSON, TOML, XML and YAML configuration files."
readme = "README.md"
authors = [
    { name = "Alexis Bergue", email = "alexis.bergue@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.12.5",
    "termcolor>=3.2.0",
]

[project.scripts]
vqu = "vqu.cli:main"

[build-system]
requires = ["uv_build>=0.9.15,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "coverage>=7.13.0",
    "pyrefly>=0.45.2",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "pytest-mock>=3.15.1",
    "ruff>=0.14.9",
    "ty>=0.0.1a32",
]

[tool.coverage.run]
branch = true
data_file = ".coverage/.coverage"
omit = [
  "*/tests/*",
  "__main__.py",
]

[tool.coverage.report]
show_missing = true
skip_covered = true

[tool.coverage.xml]
output = ".coverage/cobertura.xml"

[tool.mypy]
strict = true

[tool.pyrefly]
python-version = "3.10"
